AssignmentService in development